--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/navigation_news"
-        android:name="com.example.fimudroid.ui.news.NewsFragment"
+        android:name="com.example.fimudroid.ui.news.NewsListFragment"
         android:label="@string/title_news"
         tools:layout="@layout/fragment_news" />
 
@@ -15,6 +15,6 @@
         android:id="@+id/navigation_artiste_list"
         android:name="com.example.fimudroid.ui.artistes.ArtistListFragment"
         android:label="@string/title_artiste_list"
-        tools:layout="@layout/artistlist_layout" />
+        tools:layout="@layout/artist_list_layout" />
 
 </navigation>
