--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,18 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_news">
+    app:startDestination="@+id/navigation_artiste_list">
 
     <fragment
         android:id="@+id/navigation_news"
         android:name="com.example.fimudroid.ui.news.NewsListFragment"
         android:label="@string/title_news"
-        tools:layout="@layout/fragment_news" />
+        tools:layout="@layout/news_recycler" />
 
     <fragment
         android:id="@+id/navigation_artiste_list"
         android:name="com.example.fimudroid.ui.artistes.ArtistListFragment"
         android:label="@string/title_artiste_list"
-        tools:layout="@layout/artist_list_layout" />
+        tools:layout="@layout/artist_recycler" />
 
 </navigation>
