Tout marche (presque)

--- a/app/src/main/res/layout/news_recycler_item.xml
+++ b/app/src/main/res/layout/news_recycler_item.xml
@@ -10,6 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Titre de l'acutalité"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -23,6 +24,7 @@
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
         android:text="La sa sere le putain de texte de l'actualité de merde sa mere putain fais chier l'adapter!"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.611"
         app:layout_constraintStart_toStartOf="parent"
