--- a/app/src/main/res/layout/news_recycler.xml
+++ b/app/src/main/res/layout/news_recycler.xml
@@ -3,14 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".MainActivity">
 
     <ImageView
         android:id="@+id/news_image_header"
-        android:layout_width="411dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
+        android:contentDescription="huidsfhuysgdfuycgdfiygvidfsufhviudhfviudhfvughdfiuvhdiufvhieufhviudsfhiuehviudhfviudfhviughdfiuvdishviudrignrgitngrtnuiivgrivfenuiubiyeyvugzfeuhuzfvybeufduxhasgzcvedyuufdbcizev"
         android:cropToPadding="false"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -20,10 +21,10 @@
         android:id="@+id/news_recycler"
         android:layout_width="409dp"
         android:layout_height="0dp"
+        app:layoutManager="LinearLayoutManager"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/news_image_header"
-        app:layoutManager="LinearLayoutManager" />
+        app:layout_constraintTop_toBottomOf="@+id/news_image_header" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
