--- a/app/src/main/res/layout/artist_recycler_item.xml
+++ b/app/src/main/res/layout/artist_recycler_item.xml
@@ -17,10 +17,10 @@
         app:srcCompat="@android:mipmap/sym_def_app_icon" />
 
     <TextView
-        android:id="@+id/artist_name"
+        android:id="@+id/artist_name_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Titre de l'élément"
+        android:text="Nom artiste"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -33,13 +33,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toEndOf="@+id/imageButton"
-        app:layout_constraintTop_toBottomOf="@+id/pays_chip_group">
+        app:layout_constraintTop_toBottomOf="@+id/artist_name_text_view">
 
         <com.google.android.material.chip.Chip
             android:id="@+id/chip"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="genres" />
+            android:layout_height="wrap_content" />
 
     </com.google.android.material.chip.ChipGroup>
 
@@ -48,29 +47,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toEndOf="@+id/imageButton"
-        app:layout_constraintTop_toBottomOf="@+id/artist_name">
+        app:layout_constraintTop_toBottomOf="@+id/genres_chip_group">
 
         <com.google.android.material.chip.Chip
             android:id="@+id/chip2"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="pays" />
+            android:layout_height="wrap_content" />
     </com.google.android.material.chip.ChipGroup>
 
     <TextView
-        android:id="@+id/category_text_field"
+        android:id="@+id/category_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ellipsize="start"
-        android:paddingLeft="10dp"
-        android:paddingTop="5dp"
-        android:paddingRight="10dp"
-        android:paddingBottom="5dp"
         android:text="TextView"
-        android:textSize="16sp"
-        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/artist_name" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
