--- a/app/src/main/res/layout/news_recycler.xml
+++ b/app/src/main/res/layout/news_recycler.xml
@@ -4,17 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:visibility="visible"
     tools:context=".MainActivity">
 
     <ImageView
         android:id="@+id/news_image_header"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_height="163dp"
         android:adjustViewBounds="true"
         android:contentDescription="huidsfhuysgdfuycgdfiygvidfsufhviudhfviudhfvughdfiuvhdiufvhieufhviudsfhiuehviudhfviudfhviughdfiuvdishviudrignrgitngrtnuiivgrivfenuiubiyeyvugzfeuhuzfvybeufduxhasgzcvedyuufdbcizev"
         android:cropToPadding="false"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_launcher_background"
         tools:src="@tools:sample/backgrounds/scenic" />
 
     <androidx.recyclerview.widget.RecyclerView
@@ -24,7 +27,9 @@
         app:layoutManager="LinearLayoutManager"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/news_image_header" />
+        app:layout_constraintTop_toBottomOf="@+id/news_image_header">
+
+    </androidx.recyclerview.widget.RecyclerView>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
