--- a/app/src/main/res/layout/news_recycler_item.xml
+++ b/app/src/main/res/layout/news_recycler_item.xml
@@ -2,32 +2,78 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/row_actu_layout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="200dp">
 
-    <TextView
-        android:id="@+id/actu_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Titre de l'acutalité"
-        android:textSize="24sp"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card_news"
+        android:layout_width="359dp"
+        android:layout_height="160dp"
+        app:cardCornerRadius="15dp"
+        app:cardElevation="17dp"
+        app:contentPaddingTop="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.04" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <TextView
-        android:id="@+id/actu_core"
-        android:layout_width="321dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="8dp"
-        android:text="La sa sere le putain de texte de l'actualité de merde sa mere putain fais chier l'adapter!"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.611"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/actu_title" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/dispay_actu"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:id="@+id/actu_icon"
+                android:layout_width="68dp"
+                android:layout_height="60dp"
+                android:contentDescription="Icon of news"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@android:drawable/ic_dialog_info" />
+
+            <TextView
+                android:id="@+id/actu_title"
+                android:layout_width="273dp"
+                android:layout_height="45dp"
+                android:layout_marginStart="11dp"
+                android:layout_marginBottom="12dp"
+                android:text="Titre de l'acutalité"
+                android:textSize="30sp"
+                app:layout_constraintBottom_toTopOf="@+id/actu_core"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/actu_icon"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/actu_core"
+                android:layout_width="344dp"
+                android:layout_height="68dp"
+                android:text="La sa sere le putain de texte de l'actualité de merde sa mere putain fais chier l'adapter!"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.466"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.731" />
+
+            <TextView
+                android:id="@+id/date_actu"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="13dp"
+                android:layout_marginBottom="4dp"
+                android:text="date here"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.946"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/actu_core"
+                app:layout_constraintVertical_bias="1.0" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
