--- a/app/src/main/res/layout/news_recycler_item.xml
+++ b/app/src/main/res/layout/news_recycler_item.xml
@@ -4,15 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/row_actu_layout"
     android:layout_width="match_parent"
-    android:layout_height="200dp">
+    android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/card_news"
-        android:layout_width="359dp"
-        android:layout_height="160dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="15dp"
         app:cardCornerRadius="15dp"
-        app:cardElevation="17dp"
-        app:contentPaddingTop="10dp"
+        app:cardElevation="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,8 +28,10 @@
 
             <ImageView
                 android:id="@+id/actu_icon"
-                android:layout_width="68dp"
-                android:layout_height="60dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
                 android:contentDescription="Icon of news"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -39,7 +44,8 @@
                 android:layout_marginStart="11dp"
                 android:layout_marginBottom="12dp"
                 android:text="Titre de l'acutalité"
-                android:textSize="30sp"
+                android:textSize="20dp"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/actu_core"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/actu_icon"
@@ -48,9 +54,9 @@
             <TextView
                 android:id="@+id/actu_core"
                 android:layout_width="344dp"
-                android:layout_height="68dp"
+                android:layout_height="wrap_content"
                 android:text="La sa sere le putain de texte de l'actualité de merde sa mere putain fais chier l'adapter!"
-                android:textSize="16sp"
+                android:textSize="14sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.466"
