--- a/app/src/main/res/layout/news_recycler.xml
+++ b/app/src/main/res/layout/news_recycler.xml
@@ -7,27 +7,13 @@
     android:visibility="visible"
     tools:context=".MainActivity">
 
-    <ImageView
-        android:id="@+id/news_image_header"
-        android:layout_width="wrap_content"
-        android:layout_height="163dp"
-        android:adjustViewBounds="true"
-        android:contentDescription="huidsfhuysgdfuycgdfiygvidfsufhviudhfviudhfvughdfiuvhdiufvhieufhviudsfhiuehviudhfviudfhviughdfiuvdishviudrignrgitngrtnuiivgrivfenuiubiyeyvugzfeuhuzfvybeufduxhasgzcvedyuufdbcizev"
-        android:cropToPadding="false"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_launcher_background"
-        tools:src="@tools:sample/backgrounds/scenic" />
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/news_recycler"
         android:layout_width="409dp"
         android:layout_height="0dp"
         app:layoutManager="LinearLayoutManager"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/news_image_header">
+        app:layout_constraintTop_toTopOf="parent">
 
     </androidx.recyclerview.widget.RecyclerView>
 
