--- a/app/src/main/res/layout/new_header_recycler.xml
+++ b/app/src/main/res/layout/new_header_recycler.xml
@@ -15,6 +15,9 @@
         android:cropToPadding="true"
         android:minHeight="100dp"
         android:padding="0dp"
+        android:scaleType="centerCrop"
+        android:maxHeight="250dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
