--- a/app/src/main/res/layout/artiste_details_fragment.xml
+++ b/app/src/main/res/layout/artiste_details_fragment.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".activities.ArtisteDetailsFragment">
+    tools:context=".ui.artistes.ArtisteDetailsFragment">
 
     <TextView
         android:id="@+id/nomGroupe"
