--- a/app/src/main/res/layout/news_details_fragment.xml
+++ b/app/src/main/res/layout/news_details_fragment.xml
@@ -8,23 +8,13 @@
     tools:layout="@layout/news_details_fragment">
 
     <View
-        android:id="@+id/side_bare_news2"
-        android:layout_width="7dp"
-        android:layout_height="100dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="152dp"
-        android:layout_marginEnd="20dp"
-        android:background="@drawable/news_side_bar"
-        app:layout_constraintEnd_toStartOf="@+id/actu_image"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <View
         android:id="@+id/side_bare_news"
         android:layout_width="7dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="28dp"
+        android:layout_height="match_parent"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/news_side_bar"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/actu_title"
         app:layout_constraintHorizontal_bias="0.444"
         app:layout_constraintStart_toStartOf="parent"
@@ -49,13 +39,15 @@
         android:layout_width="300dp"
         android:layout_height="100dp"
         android:layout_marginStart="18dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginBottom="35dp"
         android:text="Core de l'actualité"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/actu_core"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.397"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.24"
+        app:layout_constraintTop_toBottomOf="@+id/actu_title"
+        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/ic_home_black_24dp" />
 
     <TextView
