lien vers reseau du fimu dans detail artiste

--- a/app/src/main/res/layout/artiste_details_fragment.xml
+++ b/app/src/main/res/layout/artiste_details_fragment.xml
@@ -83,8 +83,8 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="362dp"
-        android:contentDescription="link1"
-        android:contextClickable="false"
+        android:contentDescription="https://www.instagram.com/fimubelfort/"
+        android:contextClickable="true"
         android:src="@android:drawable/ic_dialog_alert"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -98,7 +98,7 @@
         android:layout_marginStart="18dp"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="308dp"
-        android:contentDescription="link2"
+        android:contentDescription="https://twitter.com/fimubelfort"
         android:src="@android:drawable/ic_dialog_alert"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/lienButton1"
@@ -157,6 +157,7 @@
         android:layout_marginTop="14dp"
         android:layout_marginEnd="121dp"
         android:layout_marginBottom="22dp"
+        android:text="horaire de passage"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/videoView3"
         app:layout_constraintEnd_toStartOf="@+id/secondeHorraire"
