--- a/app/src/main/res/layout/faq_recycler_item.xml
+++ b/app/src/main/res/layout/faq_recycler_item.xml
@@ -21,14 +21,13 @@
         android:id="@+id/arrowButton"
         android:layout_width="24dp"
         android:layout_height="24dp"
+        android:layout_alignTop="@+id/questionText"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:background="@android:color/transparent"
-        android:src="@drawable/ic_arrow_down"
-        />
+        android:src="@drawable/ic_arrow_down" />
 
     <!-- Answer Layout (Collapsed by default) -->
     <LinearLayout
