--- a/app/src/main/res/layout/news_details_fragment.xml
+++ b/app/src/main/res/layout/news_details_fragment.xml
@@ -10,14 +10,12 @@
     <View
         android:id="@+id/side_bare_news"
         android:layout_width="9dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:background="@drawable/news_side_bar"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/actu_title"
         app:layout_constraintEnd_toStartOf="@+id/actu_title"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="@+id/actu_title" />
 
     <TextView
         android:id="@+id/actu_title"
