--- a/app/src/main/res/layout/news_recycler_item.xml
+++ b/app/src/main/res/layout/news_recycler_item.xml
@@ -15,8 +15,10 @@
         android:background="@drawable/news_side_bar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/actu_title"
+        app:layout_constraintHorizontal_bias="0.484"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/actu_title"
